[metadata]
name = py_search
author = Christoph Tittel
author-email = christoph.tittel@dfki.de
summary = A library of search algorithms
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/ctittel/searchlib
license = MIT

[files]
package =
    searchlib

[bdist_wheel]
universal=1